2009-07-18  Jan Michael Alonzo  <jmalonzo@webkit.org>

https://bugs.webkit.org/show_bug.cgi?id=27145
        [Gtk][REGRESSION] subframe-navigate-during-main-frame-load.html fails after r45615

        Reviewed by Gustavo Noronha.

        * platform/gtk/Skipped:

        Normalize file URLs.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (dumpHistoryItem):

Canonical link: https://commits.webkit.org/37717@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46096 268f45cc-cd09-0410-ab3c-d52691b4dbfc